package com.chuan_sir.decoratorpattern.common;

/**
 * author : dongxiaochuan
 * date : 2019-10-11 14:42
 * description :
 */
public abstract class Component {

    public abstract void operate();
}
